tests/positive/issue2248/Bug.juvix
module Bug;

type A := mkA : A;

open A using {mkA} public;

aliasA : Type := A;

type C := mkC : aliasA -> C;

open C using {mkC} public;
