tests/negative/Internal/DanglingDoubleBrace.juvix
module DanglingDoubleBrace;

id {A} : A -> {{A}} := A;
